test/syntaxerrors/1TestNumericClassname.jdc
println("This should not compile");